Changed included path

--- a/Simulator.html
+++ b/Simulator.html
@@ -335,7 +335,7 @@
         </div>
     </div>
 
-<script src="enginev30.js" defer></script>
+<script src="./enginev30.js"></script>
 
 <script defer>
 "use strict";
@@ -2363,3 +2363,4 @@ window.onload = function() {
 </script>
 </body>
 </html>
+
