Changed Include Path

--- a/Balance.html
+++ b/Balance.html
@@ -399,7 +399,7 @@
         </div>
     </div>
 
-<script src="enginev30.js" defer></script>
+<script src="./enginev30.js"></script>
 
 <script defer>
 (function() {
@@ -1200,4 +1200,5 @@ function render(results) {
 })();
 </script>
 </body>
+
 </html>
