Add basic HTML structure and links to tools

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!doctype html>
+<meta charset="utf-8">
+<title>Ruhestand-Apps</title>
+<style>
+  body{font-family:system-ui;margin:2rem;line-height:1.5}
+  a.button{display:inline-block;margin:.5rem 0;padding:.7rem 1rem;border-radius:.6rem;border:1px solid #ccc;text-decoration:none}
+</style>
+<h1>Ruhestand-Apps</h1>
+<a class="button" href="Balance.html">Balance-Tool öffnen</a><br>
+<a class="button" href="Simulator-V5.html">Simulator öffnen</a>
 
