Update simulator link to point to Simulator.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 </style>
 <h1>Ruhestand-Apps</h1>
 <a class="button" href="Balance.html">Balance-Tool öffnen</a><br>
-<a class="button" href="Simulator-V5.html">Simulator öffnen</a>
+<a class="button" href="Simulator.html">Simulator öffnen</a>
 
