Update link text for Balance tool

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   a.button{display:inline-block;margin:.5rem 0;padding:.7rem 1rem;border-radius:.6rem;border:1px solid #ccc;text-decoration:none}
 </style>
 <h1>Ruhestand-Apps</h1>
-<a class="button" href="Balance.html">Balance-Tool öffnen</a><br>
+<a class="button" href="Balance.html">Balance öffnen</a><br>
 <a class="button" href="Simulator.html">Simulator öffnen</a>
 
